@@ -1,3 +1,8 @@
+2006-05-16  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsppd.c (PPD_writeFd): Follow upstream behaviour for
+	PaperDimension and ImageableArea (see STR #1689).
+
 2006-05-15  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.10.
